--- a/CSSdeiniciosesion.css
+++ b/CSSdeiniciosesion.css
@@ -1,3 +1,42 @@
 body{
-    background-color: blanchedalmond;
+    margin: 0;
+    padding: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background: linear-gradient(120deg, 
+#A813B7, #7CCF35);
+height: 100vh;
+}
+
+.formulario{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate( -50%, -50%);
+    width: 400px;
+    background: whitesmoke;
+    border-radius: 10px;
+}
+
+.formulario h1{
+    text-align: center;
+    padding: 0 0 20px;
+    border-bottom: 1px solid silver ;
+
+}
+
+.formulario form{
+    padding: 0 40px;
+    box-sizing: border-box;
+}
+
+form.username{
+    position: relative;
+    border-bottom: 2px solid whitesmoke;
+    margin: 30px 0;
+}
+
+.Registrarse{
+    text-align: center;
+    color: blue;
+    text-decoration: none;
 }
